# MandelBrot-Explorer

./: .gitignore  BuildWeb.bat  CMakeLists.txt  README.md  main.cpp
Core/: Application.cpp  Application.h
Rendering/: MandelbrotExplorer.cpp  MandelbrotExplorer.h  rlydesperateattempt.h
resources/shaders/glsl100/: mandelbrot.fs
resources/shaders/glsl330/: mandelbrot.fs
